app/assets/stylesheets/application.bootstrap.scss
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');

@import "bootstrap/scss/functions";
@import "bootstrap/scss/variables";

$enable-cssgrid: true;
$gray-200: #e8e8e8;
$body-bg: #f9f9ff;
$theme-colors: (
        "primary": #443eff,
        "secondary": #6a6a6a,
        "success": #3BA04C,
        "info": #bdbdbd,
        "warning": $warning,
        "danger": $danger,
        "light": #E3E3FD,
        "dark": $dark
);


$font-family-base: 'Inter', sans-serif;
$font-size-base: 16px;
$font-size-sm: $font-size-base * .75;
$font-size-lg: $font-size-base * 1.125;
$line-height-base: 1.5;
$line-height-sm: 1.25;
$line-height-lg: 2;

$h3-font-size: $font-size-base * 1.5;
$h4-font-size: $font-size-base * 1.125;
$h5-font-size: $font-size-base;
$h6-font-size: $font-size-base * 0.875;
$input-font-size-lg: $font-size-base;

$btn-border-radius: 4px;
$btn-font-size: 14px;
$btn-padding-x: 32px;
$btn-padding-y: 12px;

$navbar-brand-height: 28px;
$carousel-control-color: #0a0926;
$carousel-control-width: 12px;
$carousel-control-prev-icon-bg: url("data:image/svg+xml,<svg viewBox='0 0 8 14' fill='none' xmlns='http://www.w3.org/2000/svg'> <path d='M7 1L1 7L7 13' stroke='#{$carousel-control-color}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/> </svg>");
$carousel-control-next-icon-bg: url("data:image/svg+xml,<svg viewBox='0 0 8 14' fill='none' xmlns='http://www.w3.org/2000/svg'> <path d='M1 13L7 7L1 1' stroke='#{$carousel-control-color}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/> </svg>");

@import 'bootstrap/scss/bootstrap';
@import 'bootstrap-icons/font/bootstrap-icons';

.small {
  font-size: $font-size-sm;
}

.navbar {
  @include media-breakpoint-up(md) {
    box-shadow: 0 4px 6px rgba(65, 52, 146, 0.06), 0 4px 12px rgba(65, 52, 146, 0.12);
  }
}

.navbar-brand {
  font-weight: 600;
  line-height: 28px;
}

.nav-item {
  font-size: 14px;
  line-height: 24px;
}

.doctor-card {
  padding: 10px;
  border: 1px solid var(--grey-200, #E8E8E8);
  border-radius: 8px;
}

.doctor-image {
  height: 75px;
  border-radius: 4px;
}

.carousel-inner {
  width: 90%;
}

.carousel-item.active, .carousel-item-next, .carousel-item-prev {
  display: flex;
  justify-content: stretch;
}

.carousel::after {
  @include media-breakpoint-up(md) {
    content: " ";
    display: block;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    height: 3px;
    background-color: #d9d9d9;
    z-index: -1;
  }
}

.date-item {
  @include media-breakpoint-between(xs, md) {
    border-radius: 0.5rem;
    border: 1px solid var(--grey-200, #E8E8E8);
    padding: 0.25rem 0.5rem;

    .h5 {
      font-size: 14px;
    }
    .h6 {
      font-size: 12px;
    }
  }

  @include media-breakpoint-up(md) {
    cursor: pointer;
    height: 75px;

    .h5 {
      font-size: 18px;
    }
    .h6 {
      font-size: 16px;
    }
  }
}

.date-item.active {
  .h5 {
    font-weight: bold;
  }

  @include media-breakpoint-between(xs, md) {
    border-color: var(--primary-300, #9895FF);
    background: #EBEAFF;
  }

  @include media-breakpoint-up(md) {
    &::after {
      content: " ";
      display: block;
      position: relative;
      bottom: -5px;
      left: 0;
      height: 8px;
      background-color: #443eff;
      border-radius: 3px 3px 0 0;
      z-index: 2;
    }
  }
}

.slot-button + .btn {
  background-color: var(--bs-white);
}

.slot-button:checked + .btn {
  background-color: var(--bs-primary);
}

.appointment-form, .user-form {
  display: none;
}

.appointment-form.active {
  display: block;
}

.user-form.active {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 328px;
  height: 75vh;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
}

.btn-check + .currency-select {
  background-color: #FFFFFF;
  border: 1px solid #DBDBDB;
  border-radius: 8px;

  &:hover {
    font-weight: bold;
    background: #DBDEFF;
    border: none;
  }
}

.btn-check:checked + .currency-select {
  font-weight: bold;
  background-color: #DBDEFF;
  color: #2E1CFC;
  border: none;
}

.success-page {
  display: flex;
  flex-direction: column;
  justify-content: center;
  //width: 568px;
  height: 100vh;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;

  .card {
    @include media-breakpoint-between(xs, md) {
      background: var(--bs-body-bg);
      box-shadow: none !important;
    }

    @include media-breakpoint-up(md) {
      width: 568px;
    }

    .fs-6 {
      font-size: 14px;
    }
  }

  .btn {
    width: 90%;
    max-width: 568px;
    background-color: white;
  }

  .btn:hover {
    background-color: var(--bs-primary);
  }
}

.countdown {
  color: #443EFF;

  .separator {
    margin: 4px;
  }

  & > div {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-gap: 0.5rem;
    justify-items: center;
  }

  .label {
    font-size: 14px;
    color: #686868;
    grid-column: 1 / 3;
  }

  & > *:not(.separator) > *:not(.label) {
    width: 19px;
    border-radius: 8px;
    height: 32px;
    padding: 4px;
    background: #F5F5F5;
    font-weight: bold;
  }
}

